Add .jar assembler